aws/13-nat-gateway/vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block = var.vpc_cidr_block
  tags = {
    Name = "vpc-${var.project_name}"
  }
}
